# sketchbook

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/: pull_request_template.md
.github/workflows/: ci.format.yml
docs/: BUILD.md  USAGE.md
sketchbook/: Cargo.toml
sketchbook/src/: cli.rs  commands.rs  error.rs  lib.rs  main.rs  parsing.rs  sketch.rs
sketchbook/src/commands/: export.rs  view.rs
sketches/: Cargo.toml
sketches/src/: lib.rs  sketches.rs  templates.rs  utils.rs
sketches/src/sketches/: ten_print.rs  ulam.rs
sketches/src/templates/: blank.rs
src/: cli.rs  commands.rs  lib.rs  main.rs  sketches.rs  templates.rs
src/commands/: view.rs
src/sketches/: empty.rs  empty_test.rs
src/templates/: blank.rs
