[package]
name = "sketchbook"
version = "0.1.0"
authors = ["Matthew Maxwell <maxwellmattryan@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
nannou = "0.18.1"
regex = "1.5.4"
sketches = { path = "../sketches" }
structopt = { version = "0.3.26", default-features = false }
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["full"] }
